# RustHasher

./: Cargo.toml  README.md
src/: lib.rs  main.rs
