[package]
name = "rusthasher"
version = "0.1.0"
edition = "2021"
description = "A tool to hash Ethereum smart contract function signatures using Keccak-256"
license = "MIT" 
repository = "https://github.com/springbock99/rusthasher"
homepage = "https://github.com/springbock99/rusthasher"  
documentation = "https://docs.rs/rusthasher"             

[dependencies]
sha3 = "0.10"
hex = "0.4"